Stop non-player streams when game is over.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ function nodeStream(name, physics, y, time, speed) {
 
       return Rx.Observable.interval(33)
         .scan({ x: 768, y: y, vx: speed, vy: 0, node: node}, physics)
-        .takeWhile(onscreen)
+        .takeWhile((n) => onscreen(n) && !canvas.querySelector("#pinkie.gameover"))
         .do(function() {}, function() {}, function() {
           canvas.removeChild(node);
         });
