Need a scan example.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
         this.s = new Rx.Subject();
       </section>
 
+      <section data-editor="text/javascript" data-href="game/rxtut/rx.html">
+        Rx.Observable.interval(500);
+      </section>
+
       <section data-editor="text/javascript" data-href="game/game.html" data-reload>
         var canvas = document.getElementById("canvas");
         var pinkie = document.getElementById("pinkie");
