--- a/game/game.html
+++ b/game/game.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" type="text/css" href="game.css">
     <script type="text/javascript" src="lib/traceur-runtime.js"></script>
     <script type="text/javascript" src="lib/mousetrap.js"></script>
-    <script type="text/javascript" src="lib/rx.js"></script>
-    <script type="text/javascript" src="lib/rx.async.js"></script>
-    <script type="text/javascript" src="lib/rx.binding.js"></script>
-    <script type="text/javascript" src="lib/rx.time.js"></script>
-    <script type="text/javascript" src="lib/rx.coincidence.js"></script>
+    <script type="text/javascript" src="lib/ponyfood.js"></script>
   </head>
   <body>
     <div id="canvas">
