--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>What Every Hipster Should Know About Functional Reactive Programming</title>
+    <title>Reactive Game Development For The Discerning Hipster</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <style type="text/css">
       body { visibility: hidden; background: black; }
     </style>
-    <script type="text/javascript">
-      var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-332358-13']); _gaq.push(['_setDomainName', 'bodil.org']); _gaq.push(['_trackPageview']);
-      (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
+    <!-- <script type="text/javascript"> -->
+    <!--   var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-332358-13']); _gaq.push(['_setDomainName', 'bodil.org']); _gaq.push(['_trackPageview']); -->
+    <!--   (function() { -->
+    <!--   var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; -->
+    <!--   ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; -->
+    <!--   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); -->
+    <!--   })(); -->
+    <!-- </script> -->
   </head>
   <body>
 
     <div id="slides" data-background="m/glasses.jpg">
 
       <section data-image="m/have-fixie-will-hip.jpg" class="white photo">
-        <h4>what every hipster should know about</h4>
-        <h2>FUNCTIONAL REACTIVE</h2>
-        <h2>PROGRAMMING</h2>
+        <h3>REACTIVE GAME DEVELOPMENT</h3>
+        <h4>for the</h4>
+        <h2>DISCERNING HIPSTER</h2>
         <h4 class="attribution">@bodil</h4>
       </section>
 
@@ -47,33 +47,16 @@
         <h2>NOW!</h2>
       </section>
 
-      <section data-image="m/erik.jpg" class="photo"></section>
-
       <section data-image="m/dhh.jpg" class="photo white align-bottom">
-        <h4>Reactive Extensions</h4>
+        <h1>Reactive Extensions</h1>
       </section>
 
-      <section data-editor="text/javascript" data-href="game/rxtut/rx.html">
+      <section data-image="m/erik.jpg" class="photo white align-bottom">
+        <h1>RxJS</h1>
       </section>
 
-      <section data-editor="text/javascript" data-href="game/rxtut/rx.html">
-        Rx.Observable.fromArray([
-        ]).log();
-      </section>
-
-      <section data-editor="text/javascript" data-href="game/rxtut/rx.html">
-        Rx.Observable.
-      </section>
-
-      <section data-editor="text/javascript" data-href="game/rxtut/rx.html">
-        var ponies = Rx.Observable.fromArray([
-          "Fluttershy",
-          "Twilight Sparkle",
-          "Applejack",
-          "Rarity",
-          "Rainbow Dash",
-          "Pinkie Pie"
-        ]);
+      <section data-image="m/dhh-racer.jpg" class="photo white align-bottom">
+        <h1>React.JS</h1>
       </section>
 
       <section data-editor="text/javascript" data-href="game/rxtut/rx.html">
@@ -108,150 +91,174 @@
         // .log();
       </section>
 
-      <section data-editor="text/javascript" data-href="game/rxtut/rx.html">
-        this.s = new Rx.Subject();
-      </section>
+      <section data-editor="text/javascript" data-href="game/game.html" data-reload>
+const canvas = document.getElementById("canvas");
 
-      <section data-editor="text/javascript" data-href="game/rxtut/rx.html">
-        Rx.Observable.interval(500);
-      </section>
+function hashArrayMappedTrie(target, obj) {
+  for (let prop in obj) target[prop] = obj[prop];
+}
+
+function assoc() {
+  let out = {};
+  for (let i = 0; i < arguments.length; i++)
+    hashArrayMappedTrie(out, arguments[i]);
+  return out;
+}
+
+function onscreen(node) {
+  return !(node.x < -300 || node.y < -1000 || node.y > 1000);
+}
+
+function bindKey(key) {
+  let sub = new Rx.Subject();
+  Mousetrap.bind(key, () => {
+    sub.onNext(key);
+  });
+  return sub;
+}
+</section>
 
       <section data-editor="text/javascript" data-href="game/game.html" data-reload>
-        var canvas = document.getElementById("canvas");
-        var pinkie = document.getElementById("pinkie");
-        var ground = canvas.querySelector(".ground");
-      </section>
+const canvas = document.getElementById("canvas");
 
-      <section data-editor="text/javascript" data-href="game/game.html" data-reload>
-        var canvas = document.getElementById("canvas");
-        var pinkie = document.getElementById("pinkie");
-        var ground = canvas.querySelector(".ground");
+function hashArrayMappedTrie(target, obj) {
+  for (let prop in obj) target[prop] = obj[prop];
+}
 
-        function bindKey(key) {
-          var sub = new Rx.Subject();
-          Mousetrap.bind(key, () => {
-            sub.onNext(key);
-          });
-          return sub;
-        }
+function assoc() {
+  let out = {};
+  for (let i = 0; i < arguments.length; i++)
+    hashArrayMappedTrie(out, arguments[i]);
+  return out;
+}
 
-        function velocity(oldP) {
-          var p = Object.create(oldP);
-          p.x += p.vx; p.y += p.vy;
-          return p;
-        }
+function onscreen(node) {
+  return !(node.x < -300 || node.y < -1000 || node.y > 1000);
+}
 
-        function pinkiePhysics(oldP, keys) {
-          // Apply Pinkie's velocity to her position.
-          var p = velocity(oldP);
+function bindKey(key) {
+  let sub = new Rx.Subject();
+  Mousetrap.bind(key, () => {
+    sub.onNext(key);
+  });
+  return sub;
+}
 
-          // Apply gravity to Pinkie's velocity.
-          p.vy += 0.98;
+function makeElement(node) {
+  return React.DOM.div({
+    className: node.id,
+    style: {
+      left: (node.x + (node.baseX || 0)) | 0 + "px",
+      top: (node.y + (node.baseY || 0)) | 0 + "px"
+    }
+  });
+}
 
-          // AS Pinkie Pie,
-          // GIVEN that I'm falling
-          // WHEN I hit the ground
-          // THEN I stop.
-          if (p.y >= 0 && p.vy > 0) {
-            p.y = 0; p.vy = 0;
-          }
+function renderScene(nodes) {
+  return React.renderComponent(
+    React.DOM.div(null, nodes.map(makeElement)),
+    canvas
+  );
+}
 
-          // If Pinkie is on the ground and space has been pressed, JUMP.
-          if (keys[0] === "space") {
-            // p.vy = -20; // wheeee infinite jump
-            if (p.y === 0) {
-              p.vy = -20;
-              new Audio("sfx/jump.mp3").play();
-            }
-          }
+let groundStream = Rx.Observable.interval(33)
+      .map((x) => ({
+	id: "ground",
+	baseX: -128,
+	x: ((x % 64) * -8), y: 384
+      }));
 
-          return p;
-        }
+function velocity(node) {
+  return assoc(node, {
+    x: node.x + node.vx,
+    y: node.y + node.vy
+  });
+}
 
-        function renderPinkie(p) {
-          // Apply Pinkie's position to her DOM element.
-          pinkie.style.left = Math.floor(p.x) + "px";
-          pinkie.style.top = Math.floor(p.y + 276) + "px";
+let tick = bindKey("space")
+      .buffer(Rx.Observable.interval(33));
 
-          // If Pinkie is airborne, render her as jumping.
-          // If game over, it's game over.
-          pinkie.className = p.gameOver ? "gameover" : (p.y < 0) ? "jumping" : "";
-        }
+let initialHater = {
+  id: "hater",
+  vx: -8, vy: 0,
+  x: 1600, y: 300
+};
 
-        function onscreen(n) {
-          return !(n.x < -300 || n.y < -1000 || n.y > 1000);
-        }
+let haterStream = tick.scan(initialHater, (c, keys) => {
+  // Apply velocity to position.
+  c = velocity(c);
+  return onscreen(c) ? c : initialHater;
+});
 
-        function renderNode(n) {
-          n.node.style.left = Math.floor(n.x) + "px";
-          n.node.style.top = Math.floor(n.y) + "px";
-        }
+let pinkieStream = Rx.Observable.zipArray(tick, haterStream).scan({
+  id: "pinkie",
+  baseY: 276,
+  x: 0, y: 0,
+  vx: 0, vy: 0,
+  gameOver: false
+}, (p, [keys, hater]) => {
+  p = velocity(p);
 
-        function coinPhysics(oldC) {
-          // Apply velocity to position.
-          var c = velocity(oldC);
+  if (intersects(p, hater)) {
+    p.gameOver = true;
+    p.id = "pinkie gameover";
+    new Audio("sfx/gameover.mp3").play();
+    p.vy = -15;
+  }
+  if (p.gameOver) {
+    p.vy += 0.5;
+    return p;
+  }
 
-          // If Pinkie touches the coin, ding it!
-          if (c.vy === 0 && intersects(c.node, "#pinkie").length) {
-            new Audio("sfx/coin.mp3").play();
-            c.vx = 0; c.vy = -1;
-          }
-          if (c.vy < 0) {
-            c.vy = c.vy * 2;
-          }
+  // Apply gravity to Pinkie's velocity.
+  p.vy += 0.98;
 
-          return c;
-        }
+  // AS Pinkie Pie,
+  // GIVEN that I'm falling
+  // WHEN I hit the ground
+  // THEN I stop.
+  if (p.y >= 0 && p.vy > 0) {
+    p.y = 0; p.vy = 0;
+  }
 
-        function gameOverPhysics(oldC) {
-          var c = velocity(oldC);
-          c.vy += 0.5;
-          return c;
-        }
+  // If Pinkie is on the ground and space has been pressed, JUMP.
+  if (keys[0] === "space") {
+    // p.vy = -20; // wheeee infinite jump
+    if (p.y === 0) {
+      p.vy = -20;
+      new Audio("sfx/jump.mp3").play();
+    }
+  }
 
-        function nodeStream(name, physics, y, time, speed) {
-          return Rx.Observable.interval(time)
-            .flatMap(() => {
-              var node = document.createElement("div");
-              node.className = name;
-              canvas.appendChild(node);
+  p.id = (p.y < 0) ? "pinkie jumping" : "pinkie";
 
-              return Rx.Observable.interval(33)
-                .scan({ x: 768, y: y, vx: speed, vy: 0, node: node}, physics)
-                .takeWhile((n) => onscreen(n) && !canvas.querySelector("#pinkie.gameover"))
-                .finally(function() {
-                  canvas.removeChild(node);
-                });
-            })
-        }
+  return p;
+}).takeWhile(onscreen);
 
-        function gameOver() {
-          new Audio("sfx/gameover.mp3").play();
-          return Rx.Observable.interval(33)
-            .scan({ x: pinkie.offsetLeft, y: pinkie.offsetTop - 276, vx: 0, vy: -15,
-                    gameOver: true},
-                  gameOverPhysics);
-        }
+let initialCoin = {
+  id: "coin",
+  vx: -6, vy: 0,
+  x: 1600, y: 40
+};
 
-        // Rx.Observable.interval(33)
-        bindKey("space")
-          // .do(() => new Audio("sfx/jump.mp3").play())
-          .buffer(Rx.Observable.interval(33))
-          .scan({ x: 64, y: 0, vx: 0, vy: 0}, pinkiePhysics)
-          .takeWhile(() => intersects(pinkie, ".hater").length === 0)
-          .concat(Rx.Observable.defer(gameOver))
-          .takeWhile(onscreen)
-          .subscribe(renderPinkie);
+let coinStream = pinkieStream.scan(initialCoin, (c, pinkie) => {
+  // Apply velocity to position.
+  c = velocity(c);
 
-        Rx.Observable.interval(33)
-          .map((x) => ((x % 64) * -8) - 128)
-          .subscribe((x) => ground.style.left = x + "px");
+  // If Pinkie touches the coin, ding it!
+  if (c.vy === 0 && intersects(c, pinkie)) {
+    new Audio("sfx/coin.mp3").play();
+    c.vx = 0; c.vy = -1;
+  }
+  if (c.vy < 0) {
+    c.vy = c.vy * 2;
+  }
 
+  return onscreen(c) ? c : initialCoin;
+});
 
-        nodeStream("coin", coinPhysics, 96 * Math.random(), 5000, -6)
-          .subscribe(renderNode);
-        nodeStream("hater", velocity, 300, 4000, -8)
-          .subscribe(renderNode);
+Rx.Observable.zipArray(pinkieStream, groundStream, coinStream, haterStream)
+  .subscribe(renderScene);
       </section>
 
       <section data-background="m/hipster-pinkie.jpg" style="text-align: center">
@@ -278,6 +285,6 @@
     </div>
 
     <script type="text/javascript" src="build/slide.js"></script>
-    <script async src="https://www.dogeapi.com/widget/dogeapi.js" type="text/javascript"></script>
+    <!-- <script async src="https://www.dogeapi.com/widget/dogeapi.js" type="text/javascript"></script> -->
   </body>
 </html>
