--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Rx.Observable.zipArray(pinkieStream, groundStream, coinStream, haterStream)
         <p><img src="m/such-pinkie.png"></p>
         <p>@bodil</p>
         <p style="font-size: 0.8em">
-          <a href="https://github.com/bodil/boogaloo">https://github.com/bodil/boogaloo</a>
+          <a href="http://bodil.org/boogaloo/">bodil.org/boogaloo/</a>
         </p>
         <div style="position: absolute; left: 0.5em; bottom: 0.5em"
              class="doge-widget-wrapper">
