Avoiding bad language.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section data-image="m/beard-off.jpg" class="white photo">
         <h6>kleisli arrows</h6>
         <h6>yoneda lemma</h6>
-        <h6>cofree comonads</h6>
+        <h6>cofree coburritos</h6>
         <h6>zygohistomorphic prepromorphisms</h6>
       </section>
 
