much closing gif

--- a/index.html
+++ b/index.html
@@ -261,12 +261,13 @@ Rx.Observable.zipArray(pinkieStream, groundStream, coinStream, haterStream)
   .subscribe(renderScene);
       </section>
 
-      <section data-background="m/hipster-pinkie.jpg" style="text-align: center">
-        <h3>Thank you!</h3>
-        <p><img src="m/such-pinkie.png"></p>
+      <section data-background="m/muchmine.gif" class="white" style="text-align: center; background: rgba(0,0,0,0)">
+        <h3 style="margin: 0">谢谢!</h3>
+        <h3 style="margin: 0">Thank you!</h3>
+        <h3 style="margin-top: 0; margin-bottom: 1em">qatlho'!</h3>
         <p>@bodil</p>
         <p style="font-size: 0.8em">
-          <a href="http://bodil.org/boogaloo/">bodil.org/boogaloo/</a>
+          <a style="text-decoration: none" href="http://bodil.org/boogaloo/">bodil.org/boogaloo/</a>
         </p>
         <div style="position: absolute; left: 0.5em; bottom: 0.5em"
              class="doge-widget-wrapper">
