--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <h4 class="attribution">@bodil</h4>
       </section>
 
+      <section data-image="m/steve.jpg" class="photo">
+      </section>
+
       <section data-image="m/beard-off.jpg" class="white photo">
         <h6>kleisli arrows</h6>
         <h6>yoneda lemma</h6>
