Don't gameover when gameovering.

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ let pinkieStream = Rx.Observable.zipArray(tick, haterStream).scan({
 }, (p, [keys, hater]) => {
   p = velocity(p);
 
-  if (intersects(p, hater)) {
+  if (intersects(p, hater) && !p.gameOver) {
     p.gameOver = true;
     p.id = "pinkie gameover";
     new Audio("sfx/gameover.mp3").play();
