--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@ Rx.Observable.zipArray(pinkieStream, groundStream, coinStream, haterStream)
       </section>
 
       <section data-background="m/muchmine.gif" class="white" style="text-align: center; background: rgba(0,0,0,0)">
-        <h3 style="margin: 0">谢谢!</h3>
-        <h3 style="margin: 0">Thank you!</h3>
-        <h3 style="margin-top: 0; margin-bottom: 1em">qatlho'!</h3>
+        <!-- <h3 style="margin: 0">谢谢!</h3> -->
+        <h3 style="margin-top: 0; margin-bottom: 1em">Thank you!</h3>
+        <!-- <h3 style="margin-top: 0; margin-bottom: 1em">qatlho'!</h3> -->
         <p>@bodil</p>
         <p style="font-size: 0.8em">
           <a style="text-decoration: none" href="http://bodil.org/boogaloo/">bodil.org/boogaloo/</a>
