Reading list slides.

--- a/index.html
+++ b/index.html
@@ -264,6 +264,21 @@ Rx.Observable.zipArray(pinkieStream, groundStream, coinStream, haterStream)
   .subscribe(renderScene);
       </section>
 
+      <section data-image="m/bad-doge.jpg" class="white">
+        <h1>RxJS</h1>
+        <p><a style="font-size: 0.9em" href="http://reactive-extensions.github.io/RxJS/">http://reactive-extensions.github.io/RxJS/</a></p>
+      </section>
+
+      <section data-image="m/mad-doge.jpg" class="white">
+        <h1>Bacon.js</h1>
+        <p><a style="font-size: 0.9em" href="http://baconjs.github.io/">http://baconjs.github.io/</a></p>
+      </section>
+
+      <section data-image="m/doge.gif" class="white">
+        <h1>Elm</h1>
+        <p><a style="font-size: 0.9em" href="http://elm-lang.org/">http://elm-lang.org/</a></p>
+      </section>
+
       <section data-background="m/muchmine.gif" class="white" style="text-align: center; background: rgba(0,0,0,0)">
         <!-- <h3 style="margin: 0">谢谢!</h3> -->
         <h3 style="margin-top: 0; margin-bottom: 1em">Thank you!</h3>
