--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
 
       <section data-image="m/dhh-racer.jpg" class="photo white align-bottom">
-        <h1>React.JS</h1>
+        <h1>jQuery</h1>
       </section>
 
       <section data-editor="text/javascript" data-href="game/rxtut/rx.html">
@@ -95,16 +95,15 @@
       </section>
 
       <section data-editor="text/javascript" data-href="game/game.html" data-reload>
-const canvas = document.getElementById("canvas");
-
-function extend(target, obj) {
-  for (let prop in obj) target[prop] = obj[prop];
+function extend(target, src) {
+  for (let prop in src) target[prop] = src[prop];
 }
 
 function assoc() {
   let out = {};
-  for (let i = 0; i < arguments.length; i++)
+  for (let i = 0; i < arguments.length; i++) {
     extend(out, arguments[i]);
+  }
   return out;
 }
 
@@ -122,16 +121,22 @@ function bindKey(key) {
 </section>
 
       <section data-editor="text/javascript" data-href="game/game.html" data-reload>
-const canvas = document.getElementById("canvas");
+const canvas = $("#canvas");
 
-function hashArrayMappedTrie(target, obj) {
-  for (let prop in obj) target[prop] = obj[prop];
+$("&lt;div id='ground'>&lt;/div>").appendTo(canvas);
+$("&lt;div id='pinkie'>&lt;/div>").appendTo(canvas);
+$("&lt;div id='coin'>&lt;/div>").appendTo(canvas);
+$("&lt;div id='hater'>&lt;/div>").appendTo(canvas);
+
+function extend(target, src) {
+  for (let prop in src) target[prop] = src[prop];
 }
 
 function assoc() {
   let out = {};
-  for (let i = 0; i < arguments.length; i++)
-    hashArrayMappedTrie(out, arguments[i]);
+  for (let i = 0; i < arguments.length; i++) {
+    extend(out, arguments[i]);
+  }
   return out;
 }
 
@@ -147,29 +152,25 @@ function bindKey(key) {
   return sub;
 }
 
-function makeElement(node) {
-  return React.DOM.div({
-    className: node.id,
-    style: {
+function updateElement(node) {
+  $(node.id)
+    .attr("class", node.classes || "")
+    .css({
       left: (node.x + (node.baseX || 0)) | 0 + "px",
       top: (node.y + (node.baseY || 0)) | 0 + "px"
-    }
-  });
+    });
 }
 
 function renderScene(nodes) {
-  return React.renderComponent(
-    React.DOM.div(null, nodes.map(makeElement)),
-    canvas
-  );
+  nodes.forEach(updateElement);
 }
 
 let groundStream = Rx.Observable.interval(33)
-      .map((x) => ({
-	id: "ground",
+  .map((x) => ({
+	id: "#ground",
 	baseX: -128,
 	x: ((x % 64) * -8), y: 384
-      }));
+  }));
 
 function velocity(node) {
   return assoc(node, {
@@ -182,7 +183,7 @@ let tick = bindKey("space")
       .buffer(Rx.Observable.interval(33));
 
 let initialHater = {
-  id: "hater",
+  id: "#hater",
   vx: -8, vy: 0,
   x: 1600, y: 300
 };
@@ -194,7 +195,7 @@ let haterStream = tick.scan(initialHater, (c, keys) => {
 });
 
 let pinkieStream = Rx.Observable.zipArray(tick, haterStream).scan({
-  id: "pinkie",
+  id: "#pinkie",
   baseY: 276,
   x: 0, y: 0,
   vx: 0, vy: 0,
@@ -204,7 +205,7 @@ let pinkieStream = Rx.Observable.zipArray(tick, haterStream).scan({
 
   if (intersects(p, hater) && !p.gameOver) {
     p.gameOver = true;
-    p.id = "pinkie gameover";
+    p.classes = "gameover";
     new Audio("sfx/gameover.mp3").play();
     p.vy = -15;
   }
@@ -233,13 +234,13 @@ let pinkieStream = Rx.Observable.zipArray(tick, haterStream).scan({
     }
   }
 
-  p.id = (p.y < 0) ? "pinkie jumping" : "pinkie";
+  p.classes = (p.y < 0) ? "jumping" : "";
 
   return p;
 }).takeWhile(onscreen);
 
 let initialCoin = {
-  id: "coin",
+  id: "#coin",
   vx: -6, vy: 0,
   x: 1600, y: 40
 };
