--- a/game/game.html
+++ b/game/game.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="game.css">
     <script type="text/javascript" src="lib/traceur-runtime.js"></script>
+    <script type="text/javascript" src="lib/jquery.js"></script>
     <script type="text/javascript" src="lib/mousetrap.js"></script>
-    <script type="text/javascript" src="lib/react.js"></script>
     <script type="text/javascript" src="lib/rx.js"></script>
     <script type="text/javascript" src="lib/rx.async.js"></script>
     <script type="text/javascript" src="lib/rx.binding.js"></script>
