Further Pink updates.

--- a/game/game.html
+++ b/game/game.html
@@ -6,7 +6,6 @@
     <title>hai lol</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="game.css">
-    <script type="text/javascript" src="lib/traceur-runtime.js"></script>
     <script type="text/javascript" src="lib/mousetrap.js"></script>
     <script type="text/javascript" src="lib/react.js"></script>
     <script type="text/javascript" src="lib/rx.js"></script>
@@ -49,6 +48,6 @@ function intersects(me, target) {
 window.intersects = intersects;
 })();
     </script>
-    <script type="text/javascript" src="../src/modules/editor/client.js"></script>
+    <script type="text/javascript" src="../dist/pink/replclient.js"></script>
   </body>
 </html>
