--- a/game/rxtut/rx.html
+++ b/game/rxtut/rx.html
@@ -6,7 +6,6 @@
     <title>hai lol</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="rx.css">
-    <script type="text/javascript" src="../lib/traceur-runtime.js"></script>
     <script type="text/javascript" src="../lib/rx.js"></script>
     <script type="text/javascript" src="../lib/rx.async.js"></script>
     <script type="text/javascript" src="../lib/rx.binding.js"></script>
@@ -56,6 +55,6 @@
     };
   })();
     </script>
-    <script type="text/javascript" src="../../src/modules/editor/client.js"></script>
+    <script type="text/javascript" src="../../dist/pink/replclient.js"></script>
   </body>
 </html>
